# nu_plugin_dns

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pre-release
.github/actions/setup-cargo-post/: action.yml
.github/actions/setup-cargo-pre/: action.yml
.github/workflows/: build.yml  cargo-release.yml  publish.yml  release.yml
src/: lib.rs  main.rs
src/dns/: client.rs  config.rs  constants.rs  mod.rs  nu.rs  serde.rs  util.rs
src/dns/commands/: query.rs
tests/: integration.rs
tests/fixtures/zones/: nushell.sh.zone
tests/query/: expected.rs  mod.rs
