[package]
name = "nu_plugin_dns"
version = "3.0.8-alpha.1"
authors = ["Skyler Hawthorne <skyler@dead10ck.dev>"]
description = "A DNS utility for nushell"

repository = "https://github.com/dead10ck/nu_plugin_dns"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
keywords = ["dns", "dig", "nu", "nushell", "plugin"]
categories = ["command-line-utilities"]
exclude = [ ".github/" ]

[package.metadata.release]
allow-branch = [ "main" ]


[[bin]]
name = "nu_plugin_dns"
bench = false

[lib]
bench = false

[profile.release]
codegen-units = 1
lto = "thin"

[dependencies]
chrono = { version = "0.4", features = [ "std" ], default-features = false }
futures-util = "0.3.31"
nu-plugin = "0.103.0"
nu-protocol = "0.103.0"

tokio = "1.43.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

# rustls and webpki must keep in lockstep with hickory
rustls = "0.23.23"
webpki-roots = "0.26.7"
tokio-util = { version = "0.7.13", features = ["rt"] }

[dependencies.hickory-resolver]
version = "0.25.1"
features = [
  "dnssec-ring",
  "tls-ring",
  "https-ring",
  "quic-ring",
  "h3-ring",
]

[dependencies.hickory-proto]
version = "0.25.1"
features = [
  "dnssec-ring",
  "tls-ring",
  "https-ring",
  "quic-ring",
  "h3-ring",
]

[dependencies.hickory-client]
version = "0.25.1"
features = [
  "dnssec-ring",
  "tls-ring",
  "https-ring",
  "quic-ring",
  "h3-ring",
]

[dev-dependencies]
nu-plugin-test-support = "0.103.0"
nu-command = "0.103.0"
tokio = { version = "1.42.0", features = ["fs"] }

[dev-dependencies.hickory-server]
version = "0.25.1"
features = [
  "dnssec-ring",
  "tls-ring",
  "https-ring",
  "quic-ring",
  "h3-ring",
]

[workspace.metadata.release]
allow-branch = ["hickory-0.25"]
