[package]
name = "nu_plugin_dns"
version = "4.0.5-alpha.1"
authors = ["Skyler Hawthorne <skyler@dead10ck.dev>"]
description = "A DNS utility for nushell"

repository = "https://github.com/dead10ck/nu_plugin_dns"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
keywords = ["dns", "dig", "nu", "nushell", "plugin"]
categories = ["command-line-utilities"]
exclude = [ ".github/" ]

[package.metadata.release]
allow-branch = [ "main" ]
pre-release-hook = [ "./pre-release" ]

[[bin]]
name = "nu_plugin_dns"
bench = false

[lib]
bench = false

[profile.release]
codegen-units = 1
lto = "thin"

[dependencies]
chrono = { version = "0.4", features = [ "std" ], default-features = false }
futures-util = "0.3.31"
nu-plugin = "0.108.0"
nu-protocol = "0.108.0"

tokio = "1.48.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

# rustls and webpki must keep in lockstep with hickory
# [NOTE] nushell 0.107.0 has a dependency on =0.23.28
rustls = "0.23.28"
webpki-roots = "1.0.3"
tokio-util = { version = "0.7.16", features = ["rt"] }

[dependencies.hickory-resolver]
version = "0.25.2"
features = [
  "dnssec-ring",
  "tls-ring",
  "https-ring",
  "quic-ring",
  "h3-ring",
]

[dependencies.hickory-proto]
version = "0.25.2"
features = [
  "dnssec-ring",
  "tls-ring",
  "https-ring",
  "quic-ring",
  "h3-ring",
]

[dependencies.hickory-client]
version = "0.25.2"
features = [
  "dnssec-ring",
  "tls-ring",
  "https-ring",
  "quic-ring",
  "h3-ring",
]

[dev-dependencies]
nu-plugin-test-support = "0.108.0"
nu-command = "0.108.0"
tokio = { version = "1.48.0", features = ["fs"] }

[dev-dependencies.hickory-server]
version = "0.25.2"
features = [
  "dnssec-ring",
  "tls-ring",
  "https-ring",
  "quic-ring",
  "h3-ring",
]
